--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     volumes:
       - ./:/app
     working_dir: /app
-    command: sh -c "npm install && npm run dev"
+    command: sh -c "npm install"
     ports:
       - '3000:3000'
