--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,18 @@ services:
     container_name: react-app-container
     image: node:16-alpine
     volumes:
-      - ./:/app
-    working_dir: /app
-    command: sh -c "npm install"
+      - .:/var/local/app:cached
+    working_dir: /var/local/app
+    command: sh -c "npm install && npm run dev"
+  web:
+    container_name: ngeinx-container
+    image: nginx:1.19.1
+    volumes:
+      - ./config/nginx/dev.conf:/etc/nginx/nginx.conf:cached
+      - ./logs/nginx:/var/log/nginx:cached
     ports:
-      - '3000:3000'
+      - '8080:80'
+
+    depends_on:
+      - app
+
